ajout elo sur user
